--- a/app.json
+++ b/app.json
@@ -7,9 +7,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "loading": "./assets/splash.png",
+      "resizeMode": "contain"
     },
     "assetBundlePatterns": [
       "**/*"
