--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "loading": "./assets/splash.png",
+      "backgroundColor": "#d39c69",
+      "image": "./assets/splash.png",
       "resizeMode": "contain"
     },
     "assetBundlePatterns": [
